# terminalWriting

./: CMakeLists.txt
TerminalWrite/: CMakeLists.txt  fonte.h  main.cpp  main.h
