# CMakeList.txt: projeto de CMake para teste2, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

# Adicione a origem ao executável deste projeto.
add_executable (teste2 "main.cpp" "main.h"  "fonte.h")


# TODO: Adicione testes e instale destinos, se necessário.
